# Algebirc

./: .gitignore  LICENSE  README.md  RICHELOT_PIPELINE.md  TESSERACT_ARCHITECTURE.md  algebirc.cabal  input.hs  out.hs
app/: Main.hs
cbits/: u256_ct.asm  u256_ct.c  u256_ct_source.asm  u256_x86_64.S
publish/: algebirc_paper.tex  casestudy_expansion.tex  math_expansion.tex  part1_intro.tex  part2_math.tex  part3_arch.tex  part4_security.tex  part5_results.tex  part6_proofs.tex  part7_optimization.tex  part7_reference.tex
src/: Algebirc.hs
src/Algebirc/Analysis/: AdversarialOracle.hs  AlgebraicLeakage.hs  CircuitComplexity.hs  CompositionCollapse.hs  DegreeTracker.hs  FormalEntropy.hs  Invertibility.hs  Leakage.hs  LinearizationAttack.hs  StructuralProbe.hs
src/Algebirc/Compiler/: Metamorphic.hs  Standalone.hs
src/Algebirc/Core/: FiniteField.hs  Group.hs  Matrix.hs  Polynomial.hs  Resultant.hs  Types.hs  U256.hs  U256FFI.hs  U256Mod.hs
src/Algebirc/Evaluator/: Eval.hs  ObfEval.hs
src/Algebirc/Geometry/: CMAction.hs  EllipticCurve.hs  GeometricPipeline.hs  Hardness.hs  HyperellipticCurve.hs  Isogeny.hs  RichelotIsogeny.hs  SiegelModular.hs
src/Algebirc/Integration/: FileIO.hs  HaskellParser.hs
src/Algebirc/Obfuscation/: AST.hs  DegreeControl.hs  Encoder.hs  NonlinearTransform.hs  Pipeline.hs  Transform.hs
src/Algebirc/Ordering/: Fingerprint.hs  MathOrder.hs  Scheduler.hs
src/Algebirc/Runtime/: InvariantGuard.hs  SecretShare.hs  TransformFold.hs
test/: AdvancedAnalysisSpec.hs  AdversarialSpec.hs  AnalysisSpec.hs  HardnessTest.hs  HolyGrailSpec.hs  HomomorphicSpec.hs  IntegrationSpec.hs  NonlinearSpec.hs  PipelineSpec.hs  PropertySpec.hs  PureAlgebraicSpec.hs  RichelotSpec.hs  SideChannelSpec.hs  Spec.hs  StressSpec.hs  test_geometric_homomorphism.hs
test/Core/: FiniteFieldSpec.hs  MatrixSpec.hs  PolynomialSpec.hs  ResultantSpec.hs  U256Spec.hs
