cabal-version:      3.0
name:               algebirc
version:            0.1.0.0
synopsis:           Math-based algebraic obfuscation system
description:
  A Turing-complete obfuscation engine built on pure mathematical
  structures: finite fields, degree-bounded polynomials, permutation
  groups, and a stateful evaluator with formal guarantees on
  determinism, termination, and growth bounds.
license:            MIT
author:             xera
build-type:         Simple

common shared
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -O2
  default-extensions:
    ScopedTypeVariables
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    StrictData

library
  import:           shared
  c-sources:        cbits/u256_ct.c
  hs-source-dirs:   src
  exposed-modules:
    Algebirc
    Algebirc.Core.Types
    Algebirc.Core.U256
    Algebirc.Core.U256Mod
    Algebirc.Core.U256FFI
    Algebirc.Core.FiniteField
    Algebirc.Core.Polynomial
    Algebirc.Core.Group
    Algebirc.Core.Matrix
    Algebirc.Evaluator.Eval
    Algebirc.Evaluator.ObfEval
    Algebirc.Obfuscation.AST
    Algebirc.Obfuscation.Encoder
    Algebirc.Obfuscation.Transform
    Algebirc.Obfuscation.NonlinearTransform
    Algebirc.Obfuscation.DegreeControl
    Algebirc.Obfuscation.Pipeline
    Algebirc.Ordering.Fingerprint
    Algebirc.Ordering.MathOrder
    Algebirc.Ordering.Scheduler
    Algebirc.Analysis.DegreeTracker
    Algebirc.Analysis.Invertibility
    Algebirc.Analysis.Leakage
    Algebirc.Analysis.FormalEntropy
    Algebirc.Analysis.AlgebraicLeakage
    Algebirc.Analysis.CircuitComplexity
    Algebirc.Analysis.LinearizationAttack
    Algebirc.Analysis.AdversarialOracle
    Algebirc.Analysis.CompositionCollapse
    Algebirc.Analysis.StructuralProbe
    Algebirc.Integration.FileIO
    Algebirc.Integration.HaskellParser
    Algebirc.Compiler.Metamorphic
    Algebirc.Compiler.Standalone
    Algebirc.Geometry.EllipticCurve
    Algebirc.Geometry.Isogeny
    Algebirc.Geometry.CMAction
    Algebirc.Geometry.HyperellipticCurve
    Algebirc.Geometry.RichelotIsogeny
    Algebirc.Geometry.SiegelModular
    Algebirc.Geometry.GeometricPipeline
    Algebirc.Geometry.Hardness
    Algebirc.Runtime.SecretShare
    Algebirc.Runtime.TransformFold
    Algebirc.Runtime.InvariantGuard
  build-depends:
    base             >= 4.17 && < 5,
    bytestring       >= 0.11,
    containers       >= 0.6,
    mtl              >= 2.2,
    vector           >= 0.13,
    random           >= 1.2,
    process          >= 1.6,
    deepseq          >= 1.4,
    cryptonite       >= 0.30,
    memory           >= 0.18,
    aeson            >= 2.1,
    text             >= 2.0,
    directory        >= 1.3,
    filepath         >= 1.4,
    haskell-src-exts >= 1.23.0

executable algebirc
  import:           shared
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    base >= 4.17 && < 5,
    algebirc,
    containers >= 0.6,
    bytestring >= 0.11,
    directory  >= 1.3,
    filepath   >= 1.4,
    cryptonite >= 0.30,
    memory     >= 0.18

test-suite algebirc-test
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    Core.FiniteFieldSpec
    Core.PolynomialSpec
    Core.ResultantSpec
    Core.MatrixSpec
    Core.U256Spec
    StressSpec
    AnalysisSpec
    IntegrationSpec
    NonlinearSpec
    PropertySpec
    RichelotSpec
    PipelineSpec
    PureAlgebraicSpec
    SideChannelSpec
  build-depends:
    base             >= 4.17 && < 5,
    algebirc,
    QuickCheck       >= 2.14,
    hspec            >= 2.11,
    directory        >= 1.3,
    filepath         >= 1.4,
    vector           >= 0.13

test-suite algebirc-homomorphic
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          HomomorphicSpec.hs
  build-depends:
    base >= 4.17 && < 5,
    algebirc,
    mtl >= 2.2,
    containers >= 0.6,
    vector >= 0.13

test-suite algebirc-holygrail
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          HolyGrailSpec.hs
  build-depends:
    base >= 4.17 && < 5,
    algebirc,
    mtl >= 2.2,
    hspec >= 2.11,
    containers >= 0.6,
    vector >= 0.13

executable hardness-test
  import:           shared
  hs-source-dirs:   test
  main-is:          HardnessTest.hs
  build-depends:
    base >= 4.17 && < 5,
    algebirc


